# fastic-library-playground

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
